jwbearer removed
