# Model/Database/AppUser.cs
@@ -1,5 +1,6 @@
 ﻿using System;
 using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations.Schema;
 using System.Text;
 
 namespace Model.Database {
@@ -7,5 +8,8 @@ namespace Model.Database {
         public string Login { set; get; }
         public string Hash { set; get; }
         public string Salt { set; get; }
+        public string Token { get; set; }
+        [NotMapped]
+        public string Password { get; set; }
     }
 }
