# WarZoneWebApp/Controllers/ConsentController.cs
@@ -1,14 +1,11 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Threading.Tasks;
-using Microsoft.AspNetCore.Http;
-using Microsoft.AspNetCore.Mvc;
+﻿using Microsoft.AspNetCore.Mvc;
 using Model;
 using Model.Database;
+using System.Threading.Tasks;
 
 namespace WarZoneWebApp.Controllers {
-    [Route("api/[controller]")]
+
+    [Route ("api/[controller]")]
     [ApiController]
     public class ConsentController : ControllerBase {
 
@@ -20,13 +17,13 @@ namespace WarZoneWebApp.Controllers {
 
         [HttpPost]
         [Route ("[action]")]
-        public async Task<IActionResult> AddCustomer([FromBody]Customer customer) { 
-            if (string.IsNullOrWhiteSpace(customer.CustomerName) || string.IsNullOrWhiteSpace(customer.CustomerSurname)) {
-                return BadRequest();
+        public async Task<IActionResult> AddCustomer ([FromBody]Customer customer) {
+            if (string.IsNullOrWhiteSpace (customer.CustomerName) || string.IsNullOrWhiteSpace (customer.CustomerSurname)) {
+                return BadRequest ();
             }
-            await context.Customers.AddAsync(customer);
-            await context.SaveChangesAsync();
-            return Ok();
+            await context.Customers.AddAsync (customer);
+            await context.SaveChangesAsync ();
+            return Ok ();
         }
 
 
